Jenkins/stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  StackTag:
    Type: String 
    Description: A unique value to associate with all resources within the stack, generally use an environment value but this is just for practice.
  ImportStackName:
    Type: String 
    Description: Stackname to import vpc id from
  IpForAccess:
    Type: String 
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  InstanceType: 
    Type: String 
    Description: Trying out t3
    Default: t3.micro
  KeyPairName:
    Type: String 
Mappings:
  Region:
    # Using tokyo to provision all these stacks, so only adding mappings for Tokyo region
    ap-northeast-1:
      AvailabilityZone: "ap-northeast-1a"
      AMI: ami-06cd52961ce9f0d85
Resources: 
  SecurityGroup: 
    Type: AWS::EC2::SecurityGroup
    Properties: 
      VpcId: 
        Fn::ImportValue:
          !Sub "${ImportStackName}-VPCID"
      GroupDescription: Allow SSH to instance
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref IpForAccess
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref IpForAccess
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: !Ref IpForAccess
  Instance: 
    Type: AWS::EC2::Instance
    Properties:
      ImageId: 
        Fn::FindInMap: 
          - "Region"
          - Ref: "AWS::Region"
          - "AMI"
      KeyName: !Ref KeyPairName
      AvailabilityZone:
        Fn::FindInMap: 
          - "Region"
          - Ref: "AWS::Region"
          - "AvailabilityZone"
      SubnetId: 
        Fn::ImportValue:
          !Sub "${ImportStackName}-PublicSubnet"
      InstanceType: !Ref InstanceType
      SecurityGroupIds: 
        - !Ref SecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y 
          yum install java-1.8.0 -y
          yum remove java-1.7.0-openjdk -y 
          sudo wget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat/jenkins.repo
          sudo rpm --import https://pkg.jenkins.io/redhat/jenkins.io.key
          yum install jenkins -y 
          service jenkins start
          chkconfig jenkins on
      Tags:
        - Key: Name
          Value: !Join
            - '-' 
            -
              - "JenkinsMaster"
              - !Ref StackTag
Outputs: 
  PublicIp:
    Description: Public ip to access the jenkins server on 
    Value:
      Fn::GetAtt:
      - Instance 
      - PublicIp
